@startuml
title Step 5 - Deployment State Machine

hide empty description

state "Created / Validating\n(execution only)" as CREATED
state "Rejected / Validation Failed\n(execution only; no persisted row)" as REJECTED
state "Validated / Awaiting Confirmation\n(AWAITING_CONFIRMATION)" as AWAITING_CONFIRMATION
state "Confirmed, job created\n(CONFIRMED)" as CONFIRMED
state "Deploying wave by wave\n(DEPLOYING)" as DEPLOYING
state "Succeeded\n(SUCCEEDED)" as SUCCEEDED
state "Failed\n(FAILED)" as FAILED

[*] --> CREATED : createDeployment(applicationId, version, environment,\ntarget, images, context) / initialize deployment attempt
[*] --> CREATED : createTeardown(applicationId, environment, target) /\ninitialize removal attempt (UC-05); version, catalog version and\nconfiguration are taken from the deployment running on that owner

CREATED --> AWAITING_CONFIRMATION : validateDeploymentInput [valid] /\nbuildDeploymentGraph; planDeploymentWaves; resolveResourceDefinitions;\nplanInfrastructureChanges; computePlanFingerprint; persist Deployment
CREATED --> REJECTED : validateDeploymentInput [invalid, A1] /\nreturn validation error; rollback attempt
REJECTED --> [*]

AWAITING_CONFIRMATION --> AWAITING_CONFIRMATION : confirmDeployment [invalid override, A1] /\nreturn validation error; no job
AWAITING_CONFIRMATION --> AWAITING_CONFIRMATION : confirmDeployment [PLAN_CHANGED: fingerprint mismatch] /\nrefresh fingerprint; re-present rebuilt plan; no job
AWAITING_CONFIRMATION --> CONFIRMED : confirmDeployment [fingerprint match; valid overrides; CAS succeeds] /\nin one transaction: status compare-and-swap\nand create deployment_execution_job with overrides

CONFIRMED --> DEPLOYING : Deployment Worker claimNextExecutionJob /\nupdateDeploymentStatus(CONFIRMED, DEPLOYING)

DEPLOYING --> DEPLOYING : for each wave: reconcileInfrastructure; collectResourceOutputs;\nresolveEnvironmentConfiguration; generate, adapt and materialize manifest;\npublishDesiredDeploymentState; waitForWorkloadsHealthy;\ncollectWorkloadOutputs; propagateOutputChanges
DEPLOYING --> DEPLOYING : for a removal (kind = TEARDOWN): for each removal wave in reverse\ndependency order: publishDesiredDeploymentState(without those workloads);\nwaitForWorkloadsRemoved; removeApplication; delete namespace;\ndestroy managed resources; unlink existing ones
DEPLOYING --> SUCCEEDED : all waves healthy and removals done /\nsaveDeploymentRecord; updateDeploymentStatus(DEPLOYING, SUCCEEDED)
DEPLOYING --> FAILED : failure in a wave or in the removal step [A2] /\nstop remaining work; saveDeploymentRecord(error summary)

SUCCEEDED --> [*]
FAILED --> [*]

note right of CREATED
  CREATED is an execution-only attempt state.
  createDeployment() persists a Deployment only after
  successful validation, directly as AWAITING_CONFIRMATION.
  createTeardown() (UC-05) enters the same machine with
  deployment.kind = TEARDOWN: the same confirmation, job and
  worker states apply, but the plan holds only removal waves
  and no workload_deployment row is created.
end note

note right of REJECTED
  This outcome is not Deployment.status = FAILED.
  Contract 4 A1 rolls back deployment, workload_deployment and
  deployment_context rows; no Deployment Record or Deployment
  Step exists for the rejected attempt.
end note

note right of AWAITING_CONFIRMATION
  A concurrent confirm that loses the atomic
  AWAITING_CONFIRMATION -> CONFIRMED compare-and-swap
  returns DEPLOYMENT_ALREADY_CONFIRMED; its transaction
  rolls back, so no second job is created.
end note

note right of CONFIRMED
  CONFIRMED always has exactly one deployment_execution_job,
  created in the same transaction. The confirm request returns
  immediately; execution starts when a Deployment Worker claims
  the job. Worker recovery (lease, retry) is deferred (D6).
end note

note right of DEPLOYING
  Waves run in dependency order (cluster and network
  of a cloud target come first). When an output changes,
  propagateOutputChanges adds managed resources that require
  the component and dependent workloads (CASCADED) to later waves.
  For a new version, components no longer in it are removed
  after all waves are healthy.
  Progress per wave and component is kept in deployment_step
  rows (who writes them and when: D4). deployment.status never
  takes values reported by CD (D5).
end note

note right of FAILED
  FAILED is only a persisted post-creation Deployment state.
  For UC-03 A2, remaining waves and removals are not executed;
  the Deployment Record keeps the wave, related component and
  error summary.
end note

note bottom of SUCCEEDED
  SUCCEEDED means every workload in the scope, including
  CASCADED ones, is healthy and removals are done.
  UC-04 only reads repository, CD and workload status;
  it never transitions the Deployment aggregate.
end note

@enduml
